Add export function

--- a/stars-viewer/public/index.html
+++ b/stars-viewer/public/index.html
@@ -20,6 +20,7 @@
       <div class="orange-stars">Prediction between 50% and 79%</div>
       <div class="yellow-stars">Prediction between 30% and 49%</div>
       <div class="white-stars">Prediction is 29% and less</div>
+      <div class="export-link"><a href="/export" download>Export HTML</a></div>
     </div>
     <div style="overflow:hidden">
       <div id="celestial-map"></div>
